fixed header and content jumping when scroll disappears

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -15,7 +16,9 @@ body {
 }
 
 .wrapper {
+  width: 100vw;
   min-height: 100vh;
+
   overflow: hidden;
   position: relative;
 
